--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   intl: ^0.16.1
   sqflite: any
   path_provider: any
+  firebase_core: "^0.5.0"
+  cloud_firestore: ^0.14.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
